[package]
name = "my-redis"
version = "0.1.0"
authors = ["raptazure <raptazure@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mredis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mredis-server"
path = "src/bin/server.rs"


[dependencies]
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "0.6.0"
structopt = "0.3.14"
tokio = { version = "0.3.1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
mini-redis = "0.3"
futures = "0.3"
crossbeam = "0.7"